--- a/thu/assignment2/assignment2/assignment2.vcxproj.filters
+++ b/thu/assignment2/assignment2/assignment2.vcxproj.filters
@@ -28,4 +28,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
